<resources>
    <string name="app_name">별개냥</string>
    <string name="hello_word">안녕하세요 %s 님 </string>
    <string name="detail_activity_edit">편집</string>
    <string name="detail_activity_login">로그인</string>
    <string name="detail_activity_logout">로그아웃</string>
    <string name="edit_name">이름</string>
    <string name="edit_name_empty">이름을 입력하세요</string>
    <string name="edit_status">상태</string>
    <string name="edit_status_message">상태메세지를 입력하세요</string>
    <string name="detail_activity_detail">Detail</string>
    <string name="detail_activity_my_page">My Page</string>
    <string name="show_more">..더보기</string>
    <string name="show_close">접기</string>
    <string name="edit_do">수정하기</string>

    <!-- empty edit text 유효성 처리 -->
    <string name="empty_name_message">이름을 입력하세요.</string>
    <string name="empty_password_message">비밀번호를 입력하세요.</string>
    <string name="empty_id_message">아이디를 입력하세요.</string>
    <string name="incorrect_login_info">아이디/비밀번호가 옳지 않습니다..</string>

    <!-- edit text 입력 값 적절한지 유효성 처리 -->
    <string name="name_error_message">"한국 이름만 가능"</string>
    <string name="id_error_message">"아이디는 영문과 숫자로 구성됩니다."</string>
    <string name="password_error_message">"비밀번호는 영대소문자/숫자/특수문자 포함해야 하고 최소 8글자여야합니다."</string>
    <string name="password_check_error_message">"비밀번호가 일치하지 않습니다."</string>
    <string name="overlapping_id">이미 존재하는 아이디 입니다.</string>


    <!-- textView strings -->
    <string name="name">"이름"</string>
    <string name="id">"아이디"</string>
    <string name="password">"비밀번호"</string>
    <string name="check_password">"비밀번호 확인"</string>
    <string name="next">"다음"</string>
    <string name="signin_activity_signin">회원가입</string>
    <string name="choose_profile_img">프로필을 골라주세요!!</string>
    <string name="post_empty_comment">댓글을 작성하세요.</string>
</resources>